--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 REACT_APP_CLIENT_ID = communifyy_spotify_app_id_here
 REACT_APP_DB_URI = mongodb+srv://<username here>:<password here>@restoftheuri
+REACT_APP_PORT = xxxx_porthere
