--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "curl": "^0.1.4",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "mongodb": "^5.5.0",
+    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
