--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-serverless-express": "^3.4.0",
     "cors": "^2.8.5",
     "curl": "^0.1.4",
     "express": "^4.18.2",
