--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aws-serverless-express": "^3.4.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "mongodb": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
@@ -24,9 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "claudia create --version dev --region us-west-1 --deploy-proxy-api --handler lambda.handler --use-s3-bucket communifyy-bucket",
-    "prod": "claudia set-version --version production"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "claudia": "^5.14.1",
     "gh-pages": "^5.0.0"
   }
 }
